modal close add

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EASY EXCHANGE</title>
+    <link rel="preconnect" href="https://online-fonts.com" />
+    <link rel="stylesheet" href="https://online-fonts.com/fonts/proxima-nova" />
   </head>
   <body>
     <div id="root"></div>
